SVS sysfs interface

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1596,6 +1596,10 @@ config BOOT_CLOCK
 	default 1620000 if CPU_MID_CLOCK
 	default 1512000
 
+config CPU_VOLTAGE_TABLE
+  	bool "Enable CPU Voltage Table via sysfs for adjustements"
+  	default n
+
 if CPU_FREQ_MSM
 
 config MSM_CPU_FREQ_SET_MIN_MAX
