--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -566,6 +566,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
 CONFIG_CP_ACCESS=y
+CONFIG_FRONTSWAP=y
 
 #
 # Boot options
