sweep2wake by show-p1984, modified for the rezound and the high resolution atmel touch driver (atmel_224e).
Modified for ICS by dsb9938.

--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -444,6 +444,7 @@ CONFIG_MSM_SPM_V1=y
 # CONFIG_MSM_SPM_V2 is not set
 CONFIG_GPU_OVERCLOCK=y
 CONFIG_MSM_MPDEC=y
+CONFIG_CMDLINE_OPTIONS=y
 
 #
 # Cable detect: 8x60 only
