--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1533,6 +1533,10 @@ config CPU_VOLTAGE_TABLE
   	bool "Enable CPU Voltage Table via sysfs for adjustements"
   	default n
 
+config GPU_OVERCLOCK
+	bool "Enable GPU Overclocking option"
+	default n
+
 if CPU_FREQ_MSM
 
 config MSM_CPU_FREQ_SET_MIN_MAX
