--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -409,6 +409,7 @@ CONFIG_MSM_PIL=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
+CONFIG_MSM_BUSPM_DEV=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 # CONFIG_MSM_IOMMU is not set
@@ -574,7 +575,7 @@ CONFIG_CMDLINE=""
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
-# CONFIG_CPU_FREQ_STAT is not set
+CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
@@ -1157,7 +1158,7 @@ CONFIG_TUN=y
 # CONFIG_NETDEV_10000 is not set
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
-CONFIG_LIBRA_SDIOIF=m
+CONFIG_LIBRA_SDIOIF=y
 # CONFIG_BCM4329_248=m
 # CONFIG_BCM4329_SOFTAP=y
 # CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
@@ -1172,7 +1173,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
 #
 # Kineto GAN
 #
-CONFIG_KINETO_GAN=m
+CONFIG_KINETO_GAN=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1448,7 +1449,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SLIMBUS is not set
 CONFIG_AMP_TPA2051D3=y
