--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -123,14 +123,17 @@ config CPU_FREQ_DEFAULT_GOV_LAGFREE
 	help
 	Use the CPUFreq governor 'lagfree' as default.
 
-config CPU_FREQ_DEFAULT_GOV_HOTPLUG
-	bool "hotplug"
-	select CPU_FREQ_GOV_HOTPLUG
+config CPU_FREQ_DEFAULT_GOV_LAZY
+	bool "lazy"
+	select CPU_FREQ_GOV_LAZY
 	select CPU_FREQ_GOV_PERFORMANCE
 	help
-	Use the CPUFreq governor 'wheatley' as default.
-
+	  Use the CPUFreq governor 'lazy' as default.
 endchoice
+
+config CPU_FREQ_GOV_LAZY
+	tristate "'lazy' cpufreq governor"
+	depends on CPU_FREQ
 
 config CPU_FREQ_GOV_PERFORMANCE
 	tristate "'performance' governor"
