Netfilter Socket fix Courtesy of Coolexe
More info found here
https://github.com/Coolexe/shooter-ics-stock/blob/31f5bc3d7644a95c61a9b717e885e7f0afcaf332/net/netfilter/xt_socket.c

Also merge fixes to correct build

--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -120,6 +120,7 @@ CONFIG_AIO=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
+# CONFIG_CC_OPTIMIZE_FAST is not set
 
 #
 # Kernel Performance Events And Counters
@@ -558,6 +559,7 @@ CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART is not set
 CONFIG_CP_ACCESS=y
+CONFIG_ALLOW_CPU_ALIGNMENT=y
 
 #
 # Boot options
