--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -91,7 +91,10 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+# CONFIG_CC_OPTIMIZE_ALOT is not set
+CONFIG_CC_OPTIMIZE_FAST=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -551,6 +554,7 @@ CONFIG_VIRT_TO_BUS=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_CLEANCACHE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_ALLOW_CPU_ALIGNMENT=y
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
@@ -1174,7 +1178,7 @@ CONFIG_LIBRA_SDIOIF=y
 # CONFIG_BCM4329_SOFTAP=y
 # CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
 # CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
-CONFIG_BCMDHD=m
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SOFTAP=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm4330.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
