--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -593,7 +593,7 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
