--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -409,6 +409,7 @@ CONFIG_MSM_PIL=y
 CONFIG_MSM_SCM=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
+CONFIG_MSM_BUSPM_DEV=y
 CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
 # CONFIG_MSM_IOMMU is not set
@@ -574,7 +575,7 @@ CONFIG_CMDLINE=""
 #
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
-# CONFIG_CPU_FREQ_STAT is not set
+CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
@@ -595,8 +596,8 @@ CONFIG_CPU_FREQ_MSM=y
 
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 
-CONFIG_PERFLOCK=y
-CONFIG_PERFLOCK_BOOT_LOCK=y
+# CONFIG_PERFLOCK is not set
+# CONFIG_PERFLOCK_BOOT_LOCK is not set
 # CONFIG_PERFLOCK_SCREEN_POLICY is not set
 # CONFIG_PERFLOCK_SCREEN_ON_MIN is not set
 # CONFIG_PERFLOCK_SCREEN_ON_MAX is not set
@@ -1113,6 +1114,7 @@ CONFIG_TZCOM=y
 # CONFIG_EEPROM_MAX6875 is not set
 # CONFIG_EEPROM_93CX6 is not set
 # CONFIG_IWMC3200TOP is not set
+CONFIG_FSYNC_CONTROL=y
 
 #
 # Texas Instruments shared transport line discipline
@@ -1153,12 +1155,12 @@ CONFIG_TUN=y
 # CONFIG_NETDEV_10000 is not set
 CONFIG_WLAN=y
 # CONFIG_USB_ZD1201 is not set
-CONFIG_LIBRA_SDIOIF=m
+CONFIG_LIBRA_SDIOIF=y
 # CONFIG_BCM4329_248=m
 # CONFIG_BCM4329_SOFTAP=y
 # CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
 # CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
-CONFIG_BCMDHD=m
+CONFIG_BCMDHD=y
 CONFIG_BCMDHD_SOFTAP=y
 CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcm4330.bin"
 CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
@@ -1168,7 +1170,7 @@ CONFIG_BCMDHD_NVRAM_PATH="/proc/calibration"
 #
 # Kineto GAN
 #
-CONFIG_KINETO_GAN=m
+CONFIG_KINETO_GAN=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1444,7 +1446,7 @@ CONFIG_SPI_QUP=y
 #
 # SPI Protocol Masters
 #
-CONFIG_SPI_SPIDEV=m
+CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SLIMBUS is not set
 CONFIG_AMP_TPA2051D3=y
