--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -435,6 +435,7 @@ CONFIG_MSM_QDSP6_APR=y
 # CONFIG_MSM_RPC_VIBRATOR is not set
 CONFIG_MSM_SPM_V1=y
 # CONFIG_MSM_SPM_V2 is not set
+CONFIG_MSM_MPDEC=y
 
 #
 # Cable detect: 8x60 only
