--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -441,7 +441,7 @@ CONFIG_MSM_QDSP6_APR=y
 # CONFIG_MSM_RPC_VIBRATOR is not set
 CONFIG_MSM_SPM_V1=y
 # CONFIG_MSM_SPM_V2 is not set
-CONFIG_GPU_OVERCLOCK=y
+# CONFIG_GPU_OVERCLOCK is not set
 CONFIG_MSM_MPDEC=y
 CONFIG_CMDLINE_OPTIONS=y
 
