Enable BPF Compiler & Quick fix for it to build

--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -25,6 +25,7 @@ CONFIG_GENERIC_BUG=y
 CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_HAVE_IRQ_WORK=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
+CONFIG_BPF_JIT=y
 
 #
 # General setup
