--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -1404,6 +1404,8 @@ CONFIG_I2C_BOARDINFO=y
 CONFIG_I2C_COMPAT=y
 # CONFIG_I2C_CHARDEV is not set
 # CONFIG_I2C_MUX is not set
+CONFIG_RANDOM_READ_WAKEUP=1024
+CONFIG_RANDOM_WRITE_WAKEUP=2048
 
 #
 # Miscellaneous I2C Chip support
