--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -148,7 +148,16 @@ config CPU_FREQ_DEFAULT_GOV_BADASS
 
 	  If in doubt, say N.
 
+config CPU_FREQ_DEFAULT_GOV_SCARY
+	bool "scary"
+	select CPU_FREQ_GOV_SCARY
+	help
+
 endchoice
+
+config CPU_FREQ_GOV_SCARY
+	tristate "'scary' cpufreq governor"
+	depends on CPU_FREQ
 
 config CPU_FREQ_GOV_BADASS
 	tristate "'badass' cpufreq governor"
