--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -1382,7 +1382,7 @@ CONFIG_TOUCHSCREEN_ATMEL_224E=y
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE is not set
+CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
 # CONFIG_TOUCHSCREEN_TOUCHRIGHT is not set
