--- a/drivers/video/Kconfig
+++ b/drivers/video/Kconfig
@@ -191,6 +191,8 @@ endchoice
 
 config SENSE4_REFRATE
 	bool "Sense 4.x Refresh rate fix"
+	default y if LUNAR
+	default n
 
 config FB_SYS_FOPS
        tristate
