--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -648,6 +648,9 @@ CONFIG_LUNAR=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
+CONFIG_VDD_USERSPACE=y
+CONFIG_CPU_FREQ_MIN_VDD=700000
+CONFIG_CPU_FREQ_MAX_VDD=1600000
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
