--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -1277,6 +1277,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_MIRROR is not set
 # CONFIG_DM_RAID is not set
+CONFIG_DM_CACHE=y
 # CONFIG_DM_ZERO is not set
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
@@ -2552,8 +2553,11 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_IIO is not set
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_SNAPPY=y
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 # CONFIG_ZRAM_DEBUG is not set
-# CONFIG_ZCACHE is not set
+CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_ATH6K_LEGACY is not set
