--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1589,6 +1589,10 @@ config CAL_MAX
 	default 0x1F if CPU_MID_CLOCK
 	default 0x1C
 
+config BOOT_CLOCK
+	int "Boot time CPU clock speed"
+	default 1512000
+
 if CPU_FREQ_MSM
 
 config MSM_CPU_FREQ_SET_MIN_MAX
