--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -35,6 +35,8 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
+CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -415,8 +417,8 @@ CONFIG_MSM_DALRPC=y
 CONFIG_MSM_MPDEC=y
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-# CONFIG_MSM_CPU_FREQ_MAX is not set
-# CONFIG_MSM_CPU_FREQ_MIN is not set
+CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
 # CONFIG_MSM_AVS_HW is not set
@@ -628,19 +630,8 @@ CONFIG_CMDLINE=""
 # CONFIG_AUTO_ZRELADDR is not set
 
 #
-# Kernel Branch Selection
+# CPU Power Management
 #
-# CONFIG_XXTREME is not set
-# CONFIG_XXTRA is not set
-CONFIG_LUNAR=y
-# CONFIG_FUNKY is not set
-
-#
-# CPU Overclock Selection
-#
-# CONFIG_CPU_TURBO is not set
-# CONFIG_CPU_OVERCLOCK is not set
-# CONFIG_CPU_MID_CLOCK is not set
 
 #
 # CPU Frequency scaling
@@ -666,10 +657,6 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
-CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
