--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -35,8 +35,6 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -413,11 +411,12 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_GPU_OVERCLOCK is not set
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_MSM_MPDEC=y
 CONFIG_CMDLINE_OPTIONS=y
+CONFIG_BOOT_CLOCK=1620000
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MAX=1674000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
@@ -657,6 +656,10 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
 CONFIG_CPU_FREQ_GOV_BADASS=y
 CONFIG_CPU_FREQ_GOV_DANCEDANCE=y
