--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -411,11 +411,12 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_GPU_OVERCLOCK is not set
+CONFIG_GPU_OVERCLOCK=y
 CONFIG_MSM_MPDEC=y
+CONFIG_BOOT_CLOCK=1404000
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_MAX=1512000
+CONFIG_MSM_CPU_FREQ_MAX=1404000
 CONFIG_MSM_CPU_FREQ_MIN=192000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=384000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=245760
