--- a/init/Kconfig
+++ b/init/Kconfig
@@ -87,7 +87,7 @@ config CROSS_COMPILE
 
 config LOCALVERSION
 	string "Local version - append to kernel release"
-	default "-XxtraFunky"
+	default "-Funky"
 	help
 	  Append an extra string to the end of your kernel version.
 	  This will show up when you type uname, for example.
