--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1521,6 +1521,10 @@ config MSM_DALRPC_TEST
 	help
 	  Exercises DAL RPC calls to QDSP6.
 
+config GPU_OVERCLOCK
+	bool "Enable 3D GPU Overclocking option"
+	default n
+
 config MSM_MPDEC
 	bool "Enable kernel based mpdecision"
 	depends on MSM_SMP
@@ -1538,6 +1542,10 @@ config CMDLINE_OPTIONS
 	default n
 	help
 	  This enables the parsing of cmdline options.
+
+config 2DGPU_OVERCLOCK
+	bool "Enable 2D GPU Overclocking option"
+	default n
 
 if CPU_FREQ_MSM
 
