--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -409,6 +409,7 @@ CONFIG_MSM_DALRPC=y
 CONFIG_MSM_MPDEC=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
+CONFIG_2DGPU_OVERCLOCK=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1296000
 CONFIG_MSM_CPU_FREQ_MIN=384000
