--- a/arch/arm/configs/vigor_defconfig
+++ b/arch/arm/configs/vigor_defconfig
@@ -415,6 +415,7 @@ CONFIG_GPU_OVERCLOCK=y
 CONFIG_MSM_MPDEC=y
 CONFIG_BOOT_CLOCK=1404000
 CONFIG_CMDLINE_OPTIONS=y
+CONFIG_2DGPU_OVERCLOCK=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1404000
 CONFIG_MSM_CPU_FREQ_MIN=192000
