Updated version & added upstream info

--- a/arch/arm/configs/vigor_aosp_defconfig
+++ b/arch/arm/configs/vigor_aosp_defconfig
@@ -1,3 +1,7 @@
+#
+# Automatically generated make config: don't edit
+# Linux/arm 3.0.73-ck1 Kernel Configuration
+#
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_HAVE_SCHED_CLOCK=y
@@ -163,9 +167,14 @@ CONFIG_LBDAF=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_SIO=y
 # CONFIG_IOSCHED_CFQ is not set
+CONFIG_IOSCHED_SIO=y
 # CONFIG_IOSCHED_VR is not set
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_SIO=y
+CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -401,6 +410,7 @@ CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
 CONFIG_MSM_MPDEC=y
+# CONFIG_GPU_OVERCLOCK is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
 CONFIG_2DGPU_OVERCLOCK=y
@@ -628,6 +638,23 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LAZY is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
@@ -639,7 +666,8 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_INTELLI_MAX_ACTIVE_FREQ=1836000
 CONFIG_INTELLI_MAX_INACTIVE_FREQ=486000
 # CONFIG_SEC_LIMIT_MAX_FREQ is not set
-# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
+# CONFIG_CPU_FREQ_GOV_LAZY is not set
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -740,9 +768,9 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_LRO is not set
 # CONFIG_INET_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_HSTCP=y
 CONFIG_TCP_CONG_HYBLA=y
@@ -753,7 +781,15 @@ CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_SOCIOPATH=y
+# CONFIG_DEFAULT_BIC is not set
+# CONFIG_DEFAULT_CUBIC is not set
+# CONFIG_DEFAULT_HTCP is not set
+# CONFIG_DEFAULT_HYBLA is not set
+# CONFIG_DEFAULT_VEGAS is not set
+# CONFIG_DEFAULT_VENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_SOCIOPATH is not set
+# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_HTC_NETWORK_MODIFY=y
@@ -1241,12 +1277,12 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_MIRROR is not set
 # CONFIG_DM_RAID is not set
-CONFIG_DM_CACHE=y
 # CONFIG_DM_ZERO is not set
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
+CONFIG_DM_CACHE=y
 CONFIG_NETDEVICES=y
 # CONFIG_IFB is not set
 CONFIG_DUMMY=y
@@ -1766,7 +1802,6 @@ CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
-
 #
 # Sonics Silicon Backplane
 #
@@ -1915,14 +1950,13 @@ CONFIG_MT9D015=y
 #
 # CONFIG_DRM is not set
 # CONFIG_ION is not set
+CONFIG_MSM_KGSL_ADRENO220=y
 CONFIG_MSM_KGSL=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_RB_HEX is not set
 CONFIG_MSM_KGSL_2D=y
-CONFIG_MSM_KGSL_GPUMMU=y
-CONFIG_MSM_KGSL_MMU=y
 CONFIG_KGSL_PER_PROCESS_PAGE_TABLE=y
 CONFIG_MSM_KGSL_PAGE_TABLE_SIZE=0xFFF0000
 CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=32
@@ -1959,7 +1993,6 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 # CONFIG_FB_VIRTUAL is not set
 # CONFIG_FB_METRONOME is not set
 # CONFIG_FB_BROADSHEET is not set
-# CONFIG_FB_MSM_OVERLAY_LEGACY is not set
 
 #
 # Miscellaneous I2C Chip support II
@@ -1967,23 +2000,12 @@ CONFIG_FB_CFB_IMAGEBLIT=y
 CONFIG_FB_MSM_HDMI_MHL=y
 CONFIG_FB_MSM_HDMI_MHL_SII9234=y
 CONFIG_INTERNAL_CHARGING_SUPPORT=y
-CONFIG_MSM_VIDC=y
-CONFIG_MSM_VIDC_1080P=y
-CONFIG_MSM_VIDC_VENC=y
-CONFIG_MSM_VIDC_VDEC=y
 CONFIG_FB_MSM=y
-# CONFIG_FB_MSM_BACKLIGHT is not set
-# CONFIG_FB_MSM_LOGO is not set
-CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
-# CONFIG_FB_MSM_MDP22 is not set
-# CONFIG_FB_MSM_MDP30 is not set
-# CONFIG_FB_MSM_MDP31 is not set
-CONFIG_FB_MSM_MDP40=y
-# CONFIG_FB_MSM_EBI2 is not set
-# CONFIG_FB_MSM_MDDI is not set
-CONFIG_FB_MSM_MIPI_DSI=y
+CONFIG_FB_MSM_LCDC_HW=y
 # CONFIG_FB_MSM_LCDC is not set
+# CONFIG_FB_MSM_LCDC_PANEL is not set
+# CONFIG_FB_MSM_TVOUT is not set
 CONFIG_FB_MSM_OVERLAY=y
 CONFIG_FB_MSM_DTV=y
 CONFIG_FB_MSM_MDP_ABL=y
@@ -1991,27 +2013,56 @@ CONFIG_FB_MSM_MDP_ABL=y
 # CONFIG_FB_MSM_8X60_DEFAULT_DEPTH_ARGB8888 is not set
 CONFIG_FB_MSM_8X60_DEFAULT_DEPTH_RGBA8888=y
 CONFIG_FB_MSM_SELF_REFRESH=y
+CONFIG_FB_MSM_HDMI_MSM_PANEL=y
+# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
+CONFIG_FB_MSM_HDMI_MSM_PANEL_HDCP_SUPPORT=y
+CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
+CONFIG_FB_MSM_HDMI_COMMON=y
+CONFIG_FB_MSM_HDMI_3D=y
+CONFIG_MSM_DSI_CLK_AUTO_CALCULATE=y
+CONFIG_FB_MSM_MIPI_DSI=y
+CONFIG_FB_MSM_MIPI_DSI_TOSHIBA=y
+CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
+CONFIG_FB_MSM_MIPI_DSI_NOVATEK=y
+CONFIG_FB_MSM_MIPI_DSI_HIMAX=y
+CONFIG_FB_MSM_MIPI_DSI_ORISE=y
+# CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
+# CONFIG_FB_MSM_LCDC_AUO_WVGA is not set
+CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT=y
+# CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_WVGA_PT is not set
+CONFIG_FB_MSM_MIPI_RENESAS_CMD_WVGA_PT=y
+CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT=y
+CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT=y
+CONFIG_FB_MSM_MIPI_ORISE_CMD_QHD_PT=y
+CONFIG_FB_MSM_MIPI_HIMAX_VIDEO_720P_PT=y
+# CONFIG_FB_MSM_MIPI_HIMAX_CMD_720P_PT is not set
+CONFIG_FB_MSM_OVERLAY_WRITEBACK=y
+CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
+# CONFIG_LCDC_TURN_ON_BL_AFTER_PANEL_ON is not set
+CONFIG_MSM_VIDC=y
+CONFIG_MSM_VIDC_1080P=y
+CONFIG_MSM_VIDC_VENC=y
+CONFIG_MSM_VIDC_VDEC=y
+# CONFIG_FB_MSM_BACKLIGHT is not set
+# CONFIG_FB_MSM_LOGO is not set
+# CONFIG_FB_MSM_MDP22 is not set
+# CONFIG_FB_MSM_MDP30 is not set
+# CONFIG_FB_MSM_MDP31 is not set
+CONFIG_FB_MSM_MDP40=y
+# CONFIG_FB_MSM_EBI2 is not set
+# CONFIG_FB_MSM_MDDI is not set
 # CONFIG_FB_MSM_EXTMDDI is not set
-# CONFIG_FB_MSM_TVOUT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_COMMON_VGA is not set
 # CONFIG_FB_MSM_MDDI_ORISE is not set
 # CONFIG_FB_MSM_MDDI_QUICKVX is not set
 # CONFIG_FB_MSM_MDDI_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_AUTO_DETECT is not set
-# CONFIG_FB_MSM_LCDC_PANEL is not set
-CONFIG_FB_MSM_MIPI_DSI_TOSHIBA=y
-CONFIG_FB_MSM_MIPI_DSI_RENESAS=y
 CONFIG_FB_MSM_MIPI_DSI_SIMULATOR=y
-CONFIG_FB_MSM_MIPI_DSI_NOVATEK=y
-CONFIG_FB_MSM_MIPI_DSI_HIMAX=y
-CONFIG_FB_MSM_MIPI_DSI_ORISE=y
 CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
-# CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA is not set
-# CONFIG_FB_MSM_LCDC_AUO_WVGA is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA is not set
 # CONFIG_FB_MSM_LCDC_GORDON_VGA is not set
 # CONFIG_FB_MSM_LCDC_TOSHIBA_WVGA_PT is not set
@@ -2020,20 +2071,11 @@ CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_SAMSUNG_OLED_PT is not set
 # CONFIG_FB_MSM_LCDC_NT35582_WVGA is not set
 # CONFIG_FB_MSM_LCDC_WXGA is not set
-CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WVGA_PT=y
 CONFIG_FB_MSM_MIPI_TOSHIBA_VIDEO_WSVGA_PT=y
-CONFIG_FB_MSM_MIPI_NOVATEK_VIDEO_QHD_PT=y
-CONFIG_FB_MSM_MIPI_NOVATEK_CMD_QHD_PT=y
-# CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_WVGA_PT is not set
-CONFIG_FB_MSM_MIPI_RENESAS_CMD_WVGA_PT=y
 CONFIG_FB_MSM_MIPI_RENESAS_VIDEO_FWVGA_PT=y
 CONFIG_FB_MSM_MIPI_RENESAS_CMD_FWVGA_PT=y
-CONFIG_FB_MSM_MIPI_ORISE_CMD_QHD_PT=y
-CONFIG_FB_MSM_MIPI_HIMAX_VIDEO_720P_PT=y
-# CONFIG_FB_MSM_MIPI_HIMAX_CMD_720P_PT is not set
 CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
 CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO=y
-CONFIG_FB_MSM_OVERLAY_WRITEBACK=y
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_WSVGA_PANEL is not set
 # CONFIG_FB_MSM_LCDC_CHIMEI_WXGA_PANEL is not set
@@ -2045,11 +2087,9 @@ CONFIG_FB_MSM_OVERLAY_WRITEBACK=y
 # CONFIG_FB_MSM_LCDC_NT35582_PANEL is not set
 # CONFIG_FB_MSM_LCDC_SAMSUNG_OLED_PT_PANEL is not set
 # CONFIG_FB_MSM_TRY_MDDI_CATCH_LCDC_PRISM is not set
-CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
 # CONFIG_FB_MSM_MDDI_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_PANEL_AUTO_DETECT is not set
 # CONFIG_FB_MSM_LCDC_MIPI_PANEL_AUTO_DETECT is not set
-# CONFIG_LCDC_TURN_ON_BL_AFTER_PANEL_ON is not set
 # CONFIG_FB_MSM_MDDI_PRISM_WVGA is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_WVGA_PORTRAIT is not set
 # CONFIG_FB_MSM_MDDI_TOSHIBA_VGA is not set
@@ -2066,14 +2106,7 @@ CONFIG_FB_MSM_MIPI_PANEL_DETECT=y
 # CONFIG_FB_MSM_EBI2_TMD_QVGA_EPSON_QCIF is not set
 # CONFIG_FB_MSM_HDMI_AS_PRIMARY is not set
 # CONFIG_FB_MSM_PANEL_NONE is not set
-CONFIG_FB_MSM_EXT_INTERFACE_COMMON=y
-CONFIG_FB_MSM_HDMI_COMMON=y
-CONFIG_FB_MSM_HDMI_3D=y
-CONFIG_MSM_DSI_CLK_AUTO_CALCULATE=y
 # CONFIG_FB_MSM_HDMI_ADV7520_PANEL is not set
-CONFIG_FB_MSM_HDMI_MSM_PANEL=y
-# CONFIG_FB_MSM_HDMI_MSM_PANEL_DVI_SUPPORT is not set
-CONFIG_FB_MSM_HDMI_MSM_PANEL_HDCP_SUPPORT=y
 # CONFIG_FB_MSM_HDMI_MSM_PANEL_CEC_SUPPORT is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_M is not set
 # CONFIG_FB_MSM_TVOUT_NTSC_J is not set
@@ -2084,6 +2117,7 @@ CONFIG_FB_MSM_TVOUT_NONE=y
 # CONFIG_FB_MSM_DEFAULT_DEPTH_RGB565 is not set
 # CONFIG_FB_MSM_DEFAULT_DEPTH_ARGB8888 is not set
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
+# CONFIG_FB_MSM_OVERLAY_LEGACY is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
@@ -2521,12 +2555,15 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_XVMALLOC=y
-CONFIG_ZRAM=y
-CONFIG_ZRAM_SNAPPY=y
 CONFIG_SNAPPY_COMPRESS=y
 CONFIG_SNAPPY_DECOMPRESS=y
+CONFIG_XVMALLOC=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 # CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM_LZO is not set
+CONFIG_ZRAM_SNAPPY=y
 CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
@@ -2919,7 +2956,7 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_LZO=y
+CONFIG_DECOMPRESS_GZIP=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
