Updated version added upstream info updated configs

--- a/arch/arm/configs/vigor_auto_defconfig
+++ b/arch/arm/configs/vigor_auto_defconfig
@@ -1,7 +1,3 @@
-#
-# Automatically generated make config: don't edit
-# Linux/arm 3.0.73-ck1 Kernel Configuration
-#
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
 CONFIG_HAVE_SCHED_CLOCK=y
@@ -170,11 +166,6 @@ CONFIG_IOSCHED_ROW=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_IOSCHED_SIO=y
 # CONFIG_IOSCHED_VR is not set
-# CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_ROW is not set
-# CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_SIO=y
-CONFIG_DEFAULT_IOSCHED="sio"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -409,7 +400,6 @@ CONFIG_MSM_RMT_STORAGE_CLIENT=y
 CONFIG_MSM_SDIO_SMEM=y
 CONFIG_MSM_DALRPC=y
 # CONFIG_MSM_DALRPC_TEST is not set
-# CONFIG_GPU_OVERCLOCK is not set
 CONFIG_MSM_MPDEC=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 CONFIG_CMDLINE_OPTIONS=y
@@ -637,23 +627,6 @@ CONFIG_CMDLINE=""
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
-# CONFIG_CPU_FREQ_STAT_DETAILS is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_DANCEDANCE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BADASS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_NIGHTMARE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCARY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LULZACTIVE is not set
 CONFIG_CPU_FREQ_GOV_LULZACTIVE=y
 CONFIG_CPU_FREQ_GOV_LIONHEART=y
 CONFIG_CPU_FREQ_GOV_SCARY=y
@@ -665,7 +638,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_INTELLI_MAX_ACTIVE_FREQ=1512000
 CONFIG_INTELLI_MAX_INACTIVE_FREQ=486000
 # CONFIG_SEC_LIMIT_MAX_FREQ is not set
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -766,9 +739,9 @@ CONFIG_INET_XFRM_MODE_TUNNEL=y
 # CONFIG_INET_LRO is not set
 # CONFIG_INET_DIAG is not set
 CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_HSTCP=y
 CONFIG_TCP_CONG_HYBLA=y
@@ -779,15 +752,7 @@ CONFIG_TCP_CONG_VENO=y
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_SOCIOPATH=y
-# CONFIG_DEFAULT_BIC is not set
-# CONFIG_DEFAULT_CUBIC is not set
-# CONFIG_DEFAULT_HTCP is not set
-# CONFIG_DEFAULT_HYBLA is not set
-# CONFIG_DEFAULT_VEGAS is not set
-# CONFIG_DEFAULT_VENO is not set
 CONFIG_DEFAULT_WESTWOOD=y
-# CONFIG_DEFAULT_SOCIOPATH is not set
-# CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="westwood"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_HTC_NETWORK_MODIFY=y
@@ -1275,12 +1240,12 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_MIRROR is not set
 # CONFIG_DM_RAID is not set
+CONFIG_DM_CACHE=y
 # CONFIG_DM_ZERO is not set
 # CONFIG_DM_MULTIPATH is not set
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_CACHE=y
 CONFIG_NETDEVICES=y
 # CONFIG_IFB is not set
 CONFIG_DUMMY=y
@@ -1799,6 +1764,7 @@ CONFIG_THERMAL_TSENS8x60=y
 CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
+
 
 #
 # Sonics Silicon Backplane
@@ -2554,15 +2520,12 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
-CONFIG_SNAPPY_COMPRESS=y
-CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
-CONFIG_ZRAM_NUM_DEVICES=1
-CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
-# CONFIG_ZRAM_DEBUG is not set
-# CONFIG_ZRAM_LZO is not set
 CONFIG_ZRAM_SNAPPY=y
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
 CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
@@ -2955,7 +2918,7 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
-CONFIG_DECOMPRESS_GZIP=y
+CONFIG_DECOMPRESS_LZO=y
 CONFIG_GENERIC_ALLOCATOR=y
 CONFIG_REED_SOLOMON=y
 CONFIG_REED_SOLOMON_ENC8=y
