--- a/arch/arm/configs/vigor_auto_defconfig
+++ b/arch/arm/configs/vigor_auto_defconfig
@@ -1076,7 +1076,7 @@ CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_ATH3K is not set
 # CONFIG_BT_HCIUART_LL is not set
-CONFIG_BT_HCIUART_IBS=y
+# CONFIG_BT_HCIUART_IBS is not set
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_MSM_SLEEP is not set
@@ -2293,9 +2293,7 @@ CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_G_PRINTER is not set
 CONFIG_USB_G_ANDROID=y
 # CONFIG_USB_CDC_COMPOSITE is not set
-# CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
-# CONFIG_USB_G_DBGP is not set
 CONFIG_USB_CSW_HACK=y
 # CONFIG_USB_MSC_PROFILING is not set
 CONFIG_MODEM_SUPPORT=y
@@ -2310,12 +2308,9 @@ CONFIG_RMNET_SDIO_SMD_DATA_CHANNEL="DATA40"
 # CONFIG_USB_F_SERIAL is not set
 # CONFIG_USB_F_SERIAL_SDIO is not set
 # CONFIG_USB_F_SERIAL_SMD is not set
-# CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_MULTI is not set
-# CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
 # CONFIG_USB_ACCESSORY_DETECT_BY_ADC is not set
-CONFIG_USB_CSW_HACK=y
 CONFIG_USB_GADGET_VERIZON_PRODUCT_ID=y
 CONFIG_USB_HTC_SWITCH_STUB=y
 
