Enable Qualcomm crypto

--- a/arch/arm/configs/vigor_auto_defconfig
+++ b/arch/arm/configs/vigor_auto_defconfig
@@ -1393,7 +1393,7 @@ CONFIG_TOUCHSCREEN_ATMEL_224E=y
 # CONFIG_TOUCHSCREEN_INEXIO is not set
 # CONFIG_TOUCHSCREEN_MK712 is not set
 # CONFIG_TOUCHSCREEN_PENMOUNT is not set
-CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE=y
+# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE is not set
 CONFIG_S2W_SWITCH=0
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_3K is not set
@@ -2895,10 +2895,10 @@ CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
-# CONFIG_CRYPTO_DEV_QCRYPTO is not set
-# CONFIG_CRYPTO_DEV_QCE is not set
-# CONFIG_CRYPTO_DEV_QCEDEV is not set
-# CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
+CONFIG_CRYPTO_DEV_QCRYPTO=y
+CONFIG_CRYPTO_DEV_QCE=y
+CONFIG_CRYPTO_DEV_QCEDEV=y
+CONFIG_CRYPTO_DEV_OTA_CRYPTO=y
 # CONFIG_BINARY_PRINTF is not set
 
 #
