Add DOUBLETAP2WAKE Kconfig variable

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -473,6 +473,11 @@ config TOUCHSCREEN_ATMEL_SWEEP2WAKE
         depends on TOUCHSCREEN_ATMEL_224E
         default n
 
+config TOUCHSCREEN_DOUBLETAP2WAKE
+        tristate " "
+        depends on TOUCHSCREEN_ATMEL_SWEEP2WAKE
+        default n
+
 config S2W_SWITCH
 	int "Sweep2Wake switch: 0=Off 1=On 2=On without LED capacitive backlight"
         default 0
